# lie_mpc_bidirectional

./: CMakeLists.txt  LICENSE  README.md
include/: lie_mpc_bidirectional.hpp
test/: test.cpp
